adding scratch functionality

--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -70,3 +70,7 @@ body {
     /* purgecss end ignore */
 
 }
+
+/* purgecss start ignore */
+@import "../../../node_modules/codemirror/lib/codemirror.css";
+/* purgecss end ignore */
