prevent white background in listings

--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -67,6 +67,9 @@ body {
     /* purgecss start ignore */
     @import "../../../node_modules/@asciidoctor/core/dist/css/asciidoctor.css";
     @import "../../../node_modules/highlight.js/styles/github.css";
+    .hljs {
+        background-color: transparent;
+    }
     /* purgecss end ignore */
 
 }
