upgrade postcss and tailwind

--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -12,6 +12,7 @@ body {
 }
 
 .adoc {
+    /* purgecss start ignore */
     del {
         text-decoration: none;
         background-color: #fdb8c0;
@@ -26,6 +27,7 @@ body {
     ins.mod {
         background-color: #fafaa9;
     }
+    /* purgecss end ignore */
 
     /* Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
     /* Uncomment @import statement to use as custom stylesheet */
