--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -75,8 +75,8 @@ body {
 
 /* purgecss start ignore */
 @import "../../../node_modules/codemirror/lib/codemirror.css";
-.codemirror-container .CodeMirror {
-    font-family: "Droid Sans Mono", monospace !important;
+.CodeMirror * {
+    font-family: Consolas, "Droid Sans Mono", monospace !important;
     font-size: 16px;
 }
 /* purgecss end ignore */
